<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000">
    <ImageView
        android:id="@+id/monc_picture"
        android:contentDescription="@string/playerImageDesc"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/monsterName_TV"
            style="@style/attributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            tools:text="Monster name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/attributes"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/level" />

                <TextView
                    android:id="@+id/level_TV"
                    style="@style/attributes"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    tools:text="LVL" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                style="@style/attributes"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout2"
                android:text="@string/experience" />

            <TextView
                android:id="@+id/hitPoints_TV"
                style="@style/attributes"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                tools:text="HP" />

            <TextView
                android:id="@+id/textView2"
                style="@style/attributes"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_toEndOf="@+id/linearLayout2"
                android:layout_toRightOf="@+id/linearLayout2"
                android:text="@string/hitPoints" />

            <TextView
                android:id="@+id/defense_TV"
                style="@style/attributes"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                tools:text="Def" />

            <TextView
                android:id="@+id/textView3"
                style="@style/attributes"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_toEndOf="@+id/linearLayout3"
                android:layout_toRightOf="@+id/linearLayout3"
                android:text="@string/defense" />

            <TextView
                android:id="@+id/xp_TV"
                style="@style/attributes"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:layout_weight="1"
                tools:text="XP" />

            <Button
                android:id="@+id/lvlUp"
                android:layout_width="40dp"
                android:layout_height="28dp"
                android:layout_above="@+id/attack_TV"
                android:layout_below="@+id/linearLayout4"
                android:layout_toRightOf="@+id/linearLayout"
                android:background="@drawable/lvl_up"
                android:cropToPadding="true"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/attack_TV"
                style="@style/attributes"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                tools:text="Att"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

            <TextView
                android:id="@+id/textView5"
                style="@style/attributes"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_toEndOf="@+id/linearLayout2"
                android:layout_toRightOf="@+id/linearLayout2"
                android:text="@string/attack" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>