<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.elmo.FightActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#000000"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:id="@+id/enemyPicture_IV"
                android:contentDescription="@string/enemy_picture"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                tools:src="@drawable/air_monster"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/enemyName_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/attributes"
                    android:paddingBottom="10dp"
                    tools:text="Monster name" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/attributes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/attack"/>

                    <TextView
                        style="@style/attributes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/defense" />

                    <TextView
                        style="@style/attributes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hitPoints" />

                    <TextView
                        android:id="@+id/enemyTurn_TV"
                        style="@style/attributes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myTurn" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/enemyAttack_TV"
                        style="@style/attributes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="12" />

                    <TextView
                        android:id="@+id/enemyDefense_TV"
                        style="@style/attributes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="12" />

                    <TextView
                        android:id="@+id/enemyHP_TV"
                        style="@style/attributes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="12" />

                </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/nextTurn_B"
                style="@style/attributes"
                android:background="@drawable/btn_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nextTurn"/>

            <Button
                android:id="@+id/fightEnd_B"
                style="@style/attributes"
                android:background="@drawable/btn_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:text="Someone won!"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playerImage_IV"
                android:contentDescription="@string/playerImageDesc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                tools:src="@drawable/fire_monster" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/name_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/attributes"
                    android:paddingBottom="10dp"
                    tools:text="Monster name" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/attributes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/attack" />

                        <TextView
                            style="@style/attributes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/defense" />

                        <TextView
                            style="@style/attributes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hitPoints" />

                        <TextView
                            android:id="@+id/playerTurn_TV"
                            style="@style/attributes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/myTurn" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/attack_TV"
                            style="@style/attributes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="12" />

                        <TextView
                            android:id="@+id/defense_TV"
                            style="@style/attributes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="12" />

                        <TextView
                            android:id="@+id/hp_TV"
                            style="@style/attributes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="12" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
